<resources>
    <string name="app_name">Daily Smoking</string>
    <string name="title_home">Home</string>
    <string name="title_graph">Graphs</string>
    <string name="title_profile">Profile</string>
    <string name="go_on_btn_text">Continue</string>
    <string name="update_btn_text">Update</string>
    <string name="single_line">-</string>
    <string name="select_date">Select Date</string>

    <string name="alert_dialog_positive_button">OK</string>

    <!-- OnBoarding screen -->
    <string name="on_boarding_header">Welcome!</string>
    <string name="on_boarding_sub_header">Hello 🥳 Please fill in your information to start 🚀</string>
    <string name="on_boarding_package_price_hint">Package Price</string>
    <string name="on_boarding_select_currency_header_text">Select currency</string>
    <string name="on_boarding_select_smoke_count_header_text">Smoke count in a package</string>

    <string name="on_boarding_error_package_price">Give valid packet price</string>
    <string name="on_boarding_error_currency">Give valid currency</string>
    <string name="on_boarding_error_package_count">Give valid smoke count for a package</string>

    <!-- Update smoke price dialog -->
    <string name="warning_header_text">Warning</string>
    <string name="update_smoke_price_text">Update smoke price</string>
    <string name="update_smoke_price_hint">Price…</string>
    <string name="update_smoke_price_button_text">Update</string>
    <string name="update_smoke_price_select_currency_header_text">Select currency:</string>

    <!-- Home screen -->
    <string name="home_daily_smoke_price_header_text">Daily smoking expenses</string>
    <string name="home_daily_smoke_count_header_text">Daily smoking count 🤨</string>
    <string name="empty_list_body_text">Smoke free day detected 🤓</string>
    <string name="last_moke_time_info_text">Your smoke free time is ☝</string>

    <!-- Graphs screen -->
    <string name="weekly_bar_chart_marker_text">%1$s times smoked</string>
    <string name="yearly_pie_chart_center_text">Yearly smoking percents</string>
    <string name="weekly_smoking_header_text">Daily smoking counts for last 7 days</string>
    <string name="monthly_smoking_header_text">Daily smoking counts for last 30 days</string>
    <string name="yearly_smoking_header_text">Yearly smoking percentages according to the months</string>

    <!-- Profile screen -->
    <string name="profile_user_update_success">Updated user information</string>


    <string-array name="currencies">
        <item>₺</item>
        <item>$</item>
        <item>£</item>
        <item>&#8364;</item>
        <item>&#76;&#101;&#107;</item>
        <item>&#402;</item>
        <item>&#1084;&#1072;&#1085;</item>
        <item>&#112;&#46;</item>
        <item>&#66;&#90;&#36;</item>
        <item>&#36;&#98;</item>
        <item>&#75;&#77;</item>
        <item>&#80;</item>
        <item>&#1083;&#1074;</item>
        <item>&#82;&#36;</item>
        <item>&#6107;</item>
        <item>&#165;</item>
        <item>&#8353;</item>
        <item>&#107;&#110;</item>
        <item>&#8369;</item>
        <item>&#75;&#269;</item>
        <item>&#107;&#114;</item>
        <item>&#82;&#68;&#36;</item>
        <item>&#163;</item>
        <item>&#162;</item>
        <item>&#81;</item>
        <item>&#76;</item>
        <item>&#70;&#116;</item>
        <item>&#8362;</item>
        <item>&#74;&#36;</item>
        <item>&#8361;</item>
        <item>&#8365;</item>
        <item>&#76;&#115;</item>
        <item>&#76;&#116;</item>
        <item>&#1076;&#1077;&#1085;</item>
        <item>&#82;&#77;</item>
        <item>&#8360;</item>
        <item>&#8366;</item>
        <item>&#77;&#84;</item>
        <item>&#67;&#36;</item>
        <item>&#8358;</item>
        <item>&#66;&#47;&#46;</item>
        <item>&#71;&#115;</item>
        <item>&#83;&#47;&#46;</item>
        <item>&#122;&#322;</item>
        <item>&#108;&#101;&#105;</item>
        <item>&#1088;&#1091;&#1073;</item>
        <item>&#1044;&#1080;&#1085;&#46;</item>
        <item>&#83;</item>
        <item>&#82;</item>
        <item>&#67;&#72;&#70;</item>
        <item>&#78;&#84;&#36;</item>
        <item>&#3647;</item>
        <item>&#84;&#84;&#36;</item>
        <item>&#8356;</item>
        <item>&#8372;</item>
        <item>&#36;&#85;</item>
        <item>&#66;&#115;</item>
        <item>&#8363;</item>
        <item>&#90;&#36;</item>
    </string-array>

    <string-array name="package_content">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>